# mazy

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
mazy/: main.py
mazy/tests/: test_main.py
