[project]
name = "mazy"
dynamic = ["version"]
dependencies = []

[tool.setuptools.packages.find]
include = ["mazy"]  # package names should match these glob patterns (["*"] by default)

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.scripts]
mazy = "mazy.main:main"

[project.urls]
Homepage = "https://github.com/sot/mazy"
